test: add purge step to all module tests
Adds cleanup step at the end of all 51 test scripts to ensure
modules are properly purged after testing. This prevents resource
leaks and ensures clean state for subsequent test runs.

Test structure:
1. purge - Clean up any previous state
2. install - Install the module
3. status - Verify it's installed
4. purge - Clean up after testing (newly added)

--- a/tests/bazarr.conf
+++ b/tests/bazarr.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_bazarr purge
 	./bin/armbian-config --api module_bazarr install
 	./bin/armbian-config --api module_bazarr status
+	./bin/armbian-config --api module_bazarr purge
 )}
+
+
