--- a/tests/deluge.conf
+++ b/tests/deluge.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_deluge purge
 	./bin/armbian-config --api module_deluge install
 	./bin/armbian-config --api module_deluge status
+	./bin/armbian-config --api module_deluge purge
 )}
+
+
