--- a/tests/docker.conf
+++ b/tests/docker.conf
@@ -6,4 +6,7 @@ testcase() {(
 	./bin/armbian-config --api module_docker purge
 	./bin/armbian-config --api module_docker install
 	./bin/armbian-config --api module_docker status
+	./bin/armbian-config --api module_docker purge
 )}
+
+
