--- a/tests/domoticz.conf
+++ b/tests/domoticz.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_domoticz purge
 	./bin/armbian-config --api module_domoticz install
 	./bin/armbian-config --api module_domoticz status
+	./bin/armbian-config --api module_domoticz purge
 )}
+
+
