--- a/tests/evcc.conf
+++ b/tests/evcc.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_evcc purge
 	./bin/armbian-config --api module_evcc install
 	./bin/armbian-config --api module_evcc status
+	./bin/armbian-config --api module_evcc purge
 )}
+
+
