--- a/tests/filebrowser.conf
+++ b/tests/filebrowser.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_filebrowser purge
 	./bin/armbian-config --api module_filebrowser install
 	./bin/armbian-config --api module_filebrowser status
+	./bin/armbian-config --api module_filebrowser purge
 )}
+
+
