--- a/tests/ghost.conf
+++ b/tests/ghost.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_ghost purge
 	./bin/armbian-config --api module_ghost install
 	./bin/armbian-config --api module_ghost status
+	./bin/armbian-config --api module_ghost purge
 )}
+
+
