--- a/tests/grafana.conf
+++ b/tests/grafana.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_grafana purge
 	./bin/armbian-config --api module_grafana install
 	./bin/armbian-config --api module_grafana status
+	./bin/armbian-config --api module_grafana purge
 )}
+
+
