--- a/tests/hastebin.conf
+++ b/tests/hastebin.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_hastebin purge
 	./bin/armbian-config --api module_hastebin install
 	./bin/armbian-config --api module_hastebin status
+	./bin/armbian-config --api module_hastebin purge
 )}
+
+
