--- a/tests/homeassistant.conf
+++ b/tests/homeassistant.conf
@@ -6,4 +6,7 @@ testcase() {(
 	./bin/armbian-config --api module_armbian_firmware repository stable
 	./bin/armbian-config --api module_haos install
 	./bin/armbian-config --api module_haos status
+	./bin/armbian-config --api module_haos purge
 )}
+
+
