--- a/tests/homepage.conf
+++ b/tests/homepage.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_homepage purge
 	./bin/armbian-config --api module_homepage install
 	./bin/armbian-config --api module_homepage status
+	./bin/armbian-config --api module_homepage purge
 )}
+
+
