--- a/tests/immich.conf
+++ b/tests/immich.conf
@@ -6,4 +6,7 @@ testcase() {(
 	./bin/armbian-config --api module_immich purge
 	./bin/armbian-config --api module_immich install
 	./bin/armbian-config --api module_immich status
+	./bin/armbian-config --api module_immich purge
 )}
+
+
