--- a/tests/netalertx.conf
+++ b/tests/netalertx.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_netalertx purge
 	./bin/armbian-config --api module_netalertx install
 	./bin/armbian-config --api module_netalertx status
+	./bin/armbian-config --api module_netalertx purge
 )}
+
+
