--- a/tests/netdata.conf
+++ b/tests/netdata.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_netdata purge
 	./bin/armbian-config --api module_netdata install
 	./bin/armbian-config --api module_netdata status
+	./bin/armbian-config --api module_netdata purge
 )}
+
+
