--- a/tests/nextcloud.conf
+++ b/tests/nextcloud.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_nextcloud purge
 	./bin/armbian-config --api module_nextcloud install
 	./bin/armbian-config --api module_nextcloud status
+	./bin/armbian-config --api module_nextcloud purge
 )}
+
+
