--- a/tests/octoprint.conf
+++ b/tests/octoprint.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_octoprint purge
 	./bin/armbian-config --api module_octoprint install
 	./bin/armbian-config --api module_octoprint status
+	./bin/armbian-config --api module_octoprint purge
 )}
+
+
