--- a/tests/phpmyadmin.conf
+++ b/tests/phpmyadmin.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_phpmyadmin purge
 	./bin/armbian-config --api module_phpmyadmin install
 	./bin/armbian-config --api module_phpmyadmin status
+	./bin/armbian-config --api module_phpmyadmin purge
 )}
+
+
