--- a/tests/prowlarr.conf
+++ b/tests/prowlarr.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_prowlarr purge
 	./bin/armbian-config --api module_prowlarr install
 	./bin/armbian-config --api module_prowlarr status
+	./bin/armbian-config --api module_prowlarr purge
 )}
+
+
