--- a/tests/radarr.conf
+++ b/tests/radarr.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_radarr purge
 	./bin/armbian-config --api module_radarr install
 	./bin/armbian-config --api module_radarr status
+	./bin/armbian-config --api module_radarr purge
 )}
+
+
