--- a/tests/sonarr.conf
+++ b/tests/sonarr.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_sonarr purge
 	./bin/armbian-config --api module_sonarr install
 	./bin/armbian-config --api module_sonarr status
+	./bin/armbian-config --api module_sonarr purge
 )}
+
+
