--- a/tests/stirling.conf
+++ b/tests/stirling.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_stirling purge
 	./bin/armbian-config --api module_stirling install
 	./bin/armbian-config --api module_stirling status
+	./bin/armbian-config --api module_stirling purge
 )}
+
+
