--- a/tests/syncthing.conf
+++ b/tests/syncthing.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_syncthing purge
 	./bin/armbian-config --api module_syncthing install
 	./bin/armbian-config --api module_syncthing status
+	./bin/armbian-config --api module_syncthing purge
 )}
+
+
