--- a/tests/unbound.conf
+++ b/tests/unbound.conf
@@ -6,4 +6,7 @@ testcase() {(
 	./bin/armbian-config --api module_unbound purge
 	./bin/armbian-config --api module_unbound install
 	./bin/armbian-config --api module_unbound status
+	./bin/armbian-config --api module_unbound purge
 )}
+
+
