--- a/tests/uptimekuma.conf
+++ b/tests/uptimekuma.conf
@@ -6,4 +6,7 @@ testcase() {(
 	./bin/armbian-config --api module_uptimekuma purge
 	./bin/armbian-config --api module_uptimekuma install
 	./bin/armbian-config --api module_uptimekuma status
+	./bin/armbian-config --api module_uptimekuma purge
 )}
+
+
