--- a/tests/actualbudget.conf
+++ b/tests/actualbudget.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_actualbudget purge
 	./bin/armbian-config --api module_actualbudget install
 	./bin/armbian-config --api module_actualbudget status
+	./bin/armbian-config --api module_actualbudget purge
 )}
+
+
