--- a/tests/adguardhome.conf
+++ b/tests/adguardhome.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_adguardhome purge
 	./bin/armbian-config --api module_adguardhome install
 	./bin/armbian-config --api module_adguardhome status
+	./bin/armbian-config --api module_adguardhome purge
 )}
+
+
