--- a/tests/embyserver.conf
+++ b/tests/embyserver.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_embyserver purge
 	./bin/armbian-config --api module_embyserver install
 	./bin/armbian-config --api module_embyserver status
+	./bin/armbian-config --api module_embyserver purge
 )}
+
+
