--- a/tests/jellyfin.conf
+++ b/tests/jellyfin.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_jellyfin purge
 	./bin/armbian-config --api module_jellyfin install
 	./bin/armbian-config --api module_jellyfin status
+	./bin/armbian-config --api module_jellyfin purge
 )}
+
+
