--- a/tests/jellyseerr.conf
+++ b/tests/jellyseerr.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_jellyseerr purge
 	./bin/armbian-config --api module_jellyseerr install
 	./bin/armbian-config --api module_jellyseerr status
+	./bin/armbian-config --api module_jellyseerr purge
 )}
+
+
