--- a/tests/lidarr.conf
+++ b/tests/lidarr.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_lidarr purge
 	./bin/armbian-config --api module_lidarr install
 	./bin/armbian-config --api module_lidarr status
+	./bin/armbian-config --api module_lidarr purge
 )}
+
+
