--- a/tests/mariadb.conf
+++ b/tests/mariadb.conf
@@ -6,4 +6,7 @@ testcase() {(
 	./bin/armbian-config --api module_mariadb purge
 	./bin/armbian-config --api module_mariadb install
 	./bin/armbian-config --api module_mariadb status
+	./bin/armbian-config --api module_mariadb purge
 )}
+
+
