--- a/tests/medusa.conf
+++ b/tests/medusa.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_medusa purge
 	./bin/armbian-config --api module_medusa install
 	./bin/armbian-config --api module_medusa status
+	./bin/armbian-config --api module_medusa purge
 )}
+
+
