--- a/tests/navidrome.conf
+++ b/tests/navidrome.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_navidrome purge
 	./bin/armbian-config --api module_navidrome install
 	./bin/armbian-config --api module_navidrome status
+	./bin/armbian-config --api module_navidrome purge
 )}
+
+
