--- a/tests/owncloud.conf
+++ b/tests/owncloud.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_owncloud purge
 	./bin/armbian-config --api module_owncloud install
 	./bin/armbian-config --api module_owncloud status
+	./bin/armbian-config --api module_owncloud purge
 )}
+
+
