--- a/tests/prometheus.conf
+++ b/tests/prometheus.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_prometheus purge
 	./bin/armbian-config --api module_prometheus install
 	./bin/armbian-config --api module_prometheus status
+	./bin/armbian-config --api module_prometheus purge
 )}
+
+
