--- a/tests/qbittorrent.conf
+++ b/tests/qbittorrent.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_qbittorrent purge
 	./bin/armbian-config --api module_qbittorrent install
 	./bin/armbian-config --api module_qbittorrent status
+	./bin/armbian-config --api module_qbittorrent purge
 )}
+
+
