--- a/tests/sabnzbd.conf
+++ b/tests/sabnzbd.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_sabnzbd purge
 	./bin/armbian-config --api module_sabnzbd install
 	./bin/armbian-config --api module_sabnzbd status
+	./bin/armbian-config --api module_sabnzbd purge
 )}
+
+
