--- a/tests/transmission.conf
+++ b/tests/transmission.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_transmission purge
 	./bin/armbian-config --api module_transmission install
 	./bin/armbian-config --api module_transmission status
+	./bin/armbian-config --api module_transmission purge
 )}
+
+
