--- a/tests/watchtower.conf
+++ b/tests/watchtower.conf
@@ -7,4 +7,7 @@ testcase() {(
 	./bin/armbian-config --api module_watchtower purge
 	./bin/armbian-config --api module_watchtower install
 	./bin/armbian-config --api module_watchtower status
+	./bin/armbian-config --api module_watchtower purge
 )}
+
+
